# pibot-swarm-v2

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KADESHX_AI_PATCH.md  LICENSE  PI_CONTRIBUTION.md  PI_STATUS_REPORT.md  README.md  RUST_ARCHITECTURE.md  SECURITY.md  agents.py  agents_v3.py  backup_pi.sh  cline_logic.py  event_bus.py  install.sh  lab_fixed.rs  lab_vuln.rs  memory_graph.py  monitor_agent.py  pi.py  pi_edge.go  pi_skills.json  report_system_status.md  send_tweet.py  send_tweet_sovereign.py  swarm_memory.json  swarm_stats.json  test_run.py  x_final_strike.py  x_pulse_final.py  x_stealth.py  x_stealth_final.py  x_tactical_pulse.py  x_test_simple.py
.github/workflows/: build.yml
pi_core/: agent_runner.py  provider.py  tools.py
src/: agent.rs  gateway.rs  main.rs  provider.rs  session.rs  telegram.rs  tools.rs
