[package]
name = "pi-swarm"
version = "2026.2.26"
edition = "2021"
authors = ["Pi-Swarm <pibot@openclaw.local>"]
description = "🛡️ Sovereign AI Security Swarm - OpenClaw Architecture in Rust"
license = "MIT"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
# Async runtime - core like OpenClaw's event loop
tokio = { version = "1.35", features = ["full"] }

# HTTP client - for Ollama and Telegram APIs
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing - OpenClaw-style commands
clap = { version = "4.4", features = ["derive"] }

# Configuration management
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Process execution (for tools)
tokio-command-fds = "0.2"

# File watching (for workspace monitoring)
notify = "6.1"

# Time/date handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for sessions
uuid = { version = "1.6", features = ["v4"] }

# Regex for pattern matching
regex = "1.10"

# HTTP server for gateway API
axum = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Terminal UI (optional)
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
strip = true
